--- a/po/lt.po
+++ b/po/lt.po
@@ -1,10 +1,12 @@
 #
+# Julius <zadintuvas@gmail.com>, 2012.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 00:51+0200\n"
-"PO-Revision-Date: 2011-08-07 08:53+0200\n"
+"PO-Revision-Date: 2012-07-07 09:23+0300\n"
 "Last-Translator: Julius <zadintuvas@gmail.com>\n"
 "Language-Team: \n"
 "Language: lt\n"
@@ -25,7 +27,7 @@ msgstr "<b>Atidaromo failo tipas:</b>"
 
 #: ../data/ui/app-chooser.glade.h:3
 msgid "Installed Application"
-msgstr "Įdiegta programa"
+msgstr "Įdiegtos programos"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>Command line to execute:</b>"
@@ -49,18 +51,18 @@ msgid ""
 "  <b>%U</b>: Represents multiple URIs"
 msgstr ""
 "<b>Komandinėje eilutėje gali būti naudojami šie specialūs kodai:</b>\n"
-" <b>%f</b>: reiškia vieno failo pavadinimą\n"
-" <b>%F</b>: reiškia kelių failų pavadinimus\n"
-" <b>%u</b>: reiškia vieną failo URI\n"
-" <b>%U</b>: reiškia kelis URIs"
+"  <b>%f</b>: reiškia vieno failo pavadinimą\n"
+"  <b>%F</b>: reiškia kelių failų pavadinimus\n"
+"  <b>%u</b>: reiškia vieną failo URI\n"
+"  <b>%U</b>: reiškia kelis URI"
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "Custom Command Line"
-msgstr "Komandinė eilutė"
+msgstr "Pasirinktinė komandinė eilutė"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "Set selected application as default action of this file type"
-msgstr "Pasirinkite programą atverti tokių tipų failus"
+msgstr "Pasirinkite numatytąją programą šio failo tipo atvėrimui"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
@@ -74,11 +76,11 @@ msgid ""
 msgstr ""
 "<b>Šiame aplanke jau yra failas tokiu pačiu pavadinimu.</b>\n"
 "\n"
-"Ar norite pakeisti failą nauju"
+"Ar norite pakeisti esamą failą"
 
 #: ../data/ui/ask-rename.glade.h:5
 msgid "with the following file?"
-msgstr "su šiuo failu?"
+msgstr "šiuo failu?"
 
 #: ../data/ui/ask-rename.glade.h:6
 msgid "File Name:"
@@ -153,44 +155,40 @@ msgid "<b>_Group:</b>"
 msgstr "<b>_Grupė:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>View content:</b>"
-msgstr "<b>Pašto klientas:</b>"
+msgstr "<b>Gali peržiūrėti turinį:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
-#, fuzzy
 msgid "<b>Change content:</b>"
-msgstr "<b>Paskirtis:</b>"
+msgstr "<b>Gali keisti turinį:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
-#, fuzzy
 msgid "<b>Execute:</b>"
-msgstr "<b>Kita:</b>"
+msgstr "<b>Vykdyti:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
-#, fuzzy
 msgid "<b>Special bits:</b>"
-msgstr "<b>_Atverti su:</b>"
+msgstr "<b>Specialūs bitai:</b>"
 
 #: ../data/ui/file-prop.glade.h:18
 msgid "Who can read content of the file/directory"
-msgstr ""
+msgstr "Kas gali skaityti failo/aplanko turinį"
 
 #: ../data/ui/file-prop.glade.h:19
 msgid "Who can change content of the file/directory"
-msgstr ""
+msgstr "Kas gali keisti failo/aplanko turinį"
 
 #: ../data/ui/file-prop.glade.h:20
 msgid "Who can execute the file or enter the directory"
-msgstr ""
+msgstr "Kas gali vykdyti failą ar įeiti į aplanką"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Special flags for file execution"
-msgstr ""
+msgstr "Specialios žymės failo vykdymui"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Special flags for directory access"
-msgstr ""
+msgstr "Specialios žymės aplanko priėjimui"
 
 #: ../data/ui/file-prop.glade.h:23
 msgid "<b>Access Control</b>"
@@ -210,39 +208,39 @@ msgstr "Joks"
 
 #: ../data/ui/file-prop.glade.h:27
 msgid "Sticky"
-msgstr ""
+msgstr "Lipnus"
 
 #: ../data/ui/file-prop.glade.h:28
 msgid "Set GID"
-msgstr ""
+msgstr "Nustatyti GID"
 
 #: ../data/ui/file-prop.glade.h:29
 msgid "Sticky & set GID"
-msgstr ""
+msgstr "Lipnus ir nustatyti GID"
 
 #: ../data/ui/file-prop.glade.h:30
 msgid "Set UID"
-msgstr ""
+msgstr "Nustatyti UID"
 
 #: ../data/ui/file-prop.glade.h:31
 msgid "Set UID & GID"
-msgstr ""
+msgstr "Nustatyti UID ir GID"
 
 #: ../data/ui/file-prop.glade.h:32
 msgid "Nobody"
-msgstr ""
+msgstr "Niekas"
 
 #: ../data/ui/file-prop.glade.h:33
 msgid "Only owner"
-msgstr ""
+msgstr "Tik savininkas"
 
 #: ../data/ui/file-prop.glade.h:34
 msgid "Only owner and group"
-msgstr ""
+msgstr "Tik savininkas ir grupė"
 
 #: ../data/ui/file-prop.glade.h:35
 msgid "Anyone"
-msgstr ""
+msgstr "Bet kas"
 
 #. Preparing to do some file operation (Copy, Move, Delete...)
 #: ../data/ui/progress.glade.h:2
@@ -273,7 +271,7 @@ msgstr "<b>Įvyko kelios klaidos:</b>"
 
 #: ../data/ui/preferred-apps.glade.h:1 ../data/libfm-pref-apps.desktop.in.h:1
 msgid "Preferred Applications"
-msgstr "Pageidautinos programos"
+msgstr "Pageidaujamos programos"
 
 #: ../data/ui/preferred-apps.glade.h:2
 msgid "<b>Web Browser</b>"
@@ -287,15 +285,14 @@ msgstr ""
 
 #: ../data/ui/preferred-apps.glade.h:4
 msgid "<b>Mail client</b>"
-msgstr "<b>Pašto klientas:</b>"
+msgstr "<b>Pašto klientas</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on E-"
 "mail addresses."
 msgstr ""
-"Numatytas pašto klientas bus atvertas rašyti laiškui, kai jūs paspausite ant "
-"el. pašto adreso."
+"Kai paspausite ant el. pašto adreso bus atvertas numatytas pašto klientas."
 
 #: ../data/ui/preferred-apps.glade.h:6
 msgid "<b>Terminal Emulator</b>"
@@ -311,7 +308,7 @@ msgstr "Sistemos programos"
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "File Associations"
-msgstr "Failų asociacijos"
+msgstr "Failų sąsajos"
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
@@ -411,7 +408,7 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:327
 msgid "The file operation is cancelled and there are some errors."
-msgstr "Failų operacija atšaukta, tačiau įvyko klaidų."
+msgstr "Failo operacija atšaukta, įvyko klaidų."
 
 #: ../src/gtk/fm-progress-dlg.c:329
 msgid "Cancelled"
@@ -449,15 +446,15 @@ msgstr "Kopijuojami failai"
 
 #: ../src/gtk/fm-progress-dlg.c:494
 msgid "Trashing files"
-msgstr "Išmetami failai"
+msgstr "Failai siunčiami į šiukšlių dėžę"
 
 #: ../src/gtk/fm-progress-dlg.c:497
 msgid "Deleting files"
-msgstr "Ištrinami failai"
+msgstr "Šalinami failai"
 
 #: ../src/gtk/fm-progress-dlg.c:500
 msgid "Creating symlinks"
-msgstr "Kuriamos sisteminės nuorodos"
+msgstr "Kuriamos simbolinės nuorodos"
 
 #: ../src/gtk/fm-progress-dlg.c:503
 msgid "Changing file attributes"
@@ -472,7 +469,7 @@ msgstr[2] "baitų"
 
 #: ../src/gtk/fm-file-properties.c:221
 msgid "Please enter a valid user name or numeric id."
-msgstr "Prašome įvesti teisingą vartotojo vardą arba numerį."
+msgstr "Prašome įvesti teisingą naudotojo vardą arba numerį."
 
 #: ../src/gtk/fm-file-properties.c:251
 msgid "Please enter a valid group name or numeric id."
@@ -487,9 +484,8 @@ msgstr ""
 "poaplankiams?"
 
 #: ../src/gtk/fm-file-properties.c:617
-#, fuzzy
 msgid "<b>Access content:</b>"
-msgstr "<b>Priėjimo kontrolė</b>"
+msgstr "<b>Gali pasiekti turinį:</b>"
 
 #: ../src/gtk/fm-file-properties.c:732
 msgid "Files of different types"
@@ -538,7 +534,7 @@ msgstr "Aplankų medis"
 
 #: ../src/gtk/fm-side-pane.c:51
 msgid "Remote"
-msgstr "Nuotolinis"
+msgstr "Nutolęs"
 
 #: ../src/gtk/fm-file-menu.c:108 ../src/gtk/fm-file-menu.c:109
 msgid "Open With..."
@@ -548,9 +544,10 @@ msgstr "Atverti su..."
 msgid "Rename"
 msgstr "Pervadinti"
 
+# symlink=symbolic link
 #: ../src/gtk/fm-file-menu.c:115
 msgid "Create Symlink"
-msgstr "Sukurti sisteminę nuorodą"
+msgstr "Sukurti simbolinę nuorodą"
 
 #: ../src/gtk/fm-file-menu.c:116
 msgid "Send To"
@@ -574,7 +571,7 @@ msgstr "_Atstatyti"
 
 #: ../src/gtk/fm-file-menu.c:386
 msgid "Restore trashed files to original paths"
-msgstr "Atstatyti išmestus failus iš šiukšlinės"
+msgstr "Atstatyti išmestus failus į jų originalias vietas"
 
 #: ../src/gtk/fm-dnd-dest.c:389
 msgid "XDirectSave failed."
@@ -582,11 +579,11 @@ msgstr "XDirectSave nepavyko."
 
 #: ../src/gtk/fm-app-chooser-dlg.c:102
 msgid "Use selected application to open files"
-msgstr "Naudoti pasirinktą programą atverti failams"
+msgstr "Atverti failams naudoti pasirinktą programą"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:109
 msgid "Execute custom command line to open files"
-msgstr "Vykdyti komandą atverti failus"
+msgstr "Failų atvėrimui naudoti pasirinktinę komandą"
 
 #: ../src/gtk/fm-app-chooser-combo-box.c:188
 msgid "Customize"
@@ -659,12 +656,12 @@ msgid ""
 "What do you want to do with it?"
 msgstr ""
 "„%s“ yra vykdomasis tekstinis failas.\n"
-"Ką norite daryti su juo?"
+"Ką norite su juo daryti?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:107
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
-msgstr "„%s“ yra vykdomasis failas. Ar norite jį vykdyti?"
+msgstr "„%s“ yra vykdomasis failas. Ar norite jį įvykdyti?"
 
 #: ../src/gtk/fm-dir-tree-model.c:394 ../src/gtk/fm-dir-tree-model.c:1043
 msgid "<No Sub Folder>"
@@ -672,7 +669,7 @@ msgstr "<Jokio poaplankio>"
 
 #: ../src/gtk/fm-dir-tree-model.c:396 ../src/gtk/fm-dir-tree-model.c:1044
 msgid "Loading..."
-msgstr "Ruošiamasi..."
+msgstr "Įkeliama..."
 
 #: ../src/job/fm-dir-list-job.c:237 ../src/job/fm-dir-list-job.c:248
 #: ../src/job/fm-dir-list-job.c:348
@@ -864,119 +861,3 @@ msgstr "Tuščias optinis diskas"
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
 msgstr "Optinis diskas"
-
-#~ msgid "<b>Group:</b>"
-#~ msgstr "<b>Grupė:</b>"
-
-#~ msgid "<b>Owner:</b>"
-#~ msgstr "<b>Savininkas:</b>"
-
-#~ msgid "Make the file executable"
-#~ msgstr "Padaryti failą vykdomą"
-
-#~ msgid "Operations that all other users can do"
-#~ msgstr "Operacijos, kurias gali atlikti kiti vartotojai"
-
-#~ msgid "Operations that the owner of the file can do"
-#~ msgstr "Operacijos, kurias gali atlikti failo savininkas"
-
-#~ msgid ""
-#~ "Operations that users in the same group as the owner of the file can do"
-#~ msgstr ""
-#~ "Operacijos, kurias gali atlikti vartotojai, esantys savininko grupėje"
-
-#~ msgid "Read and Write"
-#~ msgstr "Skaityti ir rašyti"
-
-#~ msgid "Read only"
-#~ msgstr "Tik skaityti"
-
-#~ msgid "Write only"
-#~ msgstr "Tik rašyti"
-
-#~ msgid "It's not a valid directory"
-#~ msgstr "Tai nėra tinkamas aplankas"
-
-#~ msgid "Icon View Model"
-#~ msgstr "P_iktogramų peržiūra"
-
-#~ msgid "Selection mode"
-#~ msgstr "Pasirinkti atvirkščiai"
-
-#~ msgid "The selection mode"
-#~ msgstr "Pasirinkite aplanką"
-
-#~ msgid "_File"
-#~ msgstr "_Failas"
-
-#~ msgid "_New Window"
-#~ msgstr "_Naujas langas"
-
-#~ msgid "_Close Window"
-#~ msgstr "_Uždaryti langą"
-
-#~ msgid "_Edit"
-#~ msgstr "_Keisti"
-
-#~ msgid "Move To..."
-#~ msgstr "Perkelti į..."
-
-#~ msgid "Copy To..."
-#~ msgstr "Kopijuoti į..."
-
-#~ msgid "_View"
-#~ msgstr "_Rodyti"
-
-#~ msgid "_Sort Files"
-#~ msgstr "_Rūšiuoti failus"
-
-#~ msgid "_Help"
-#~ msgstr "_Pagalba"
-
-#~ msgid "_Go"
-#~ msgstr "_Eiti"
-
-#~ msgid "Previous Folder"
-#~ msgstr "Ankstesnis aplankas"
-
-#~ msgid "Parent Folder"
-#~ msgstr "Aukštesnis aplankas"
-
-#~ msgid "Go to parent Folder"
-#~ msgstr "Aukštyn"
-
-#~ msgid "Home Folder"
-#~ msgstr "Namų katalogas"
-
-#~ msgid "Desktop Folder"
-#~ msgstr "Darbastalio katalogas"
-
-#~ msgid "_Bookmarks"
-#~ msgstr "Ž_ymelės"
-
-#~ msgid "Add To Bookmarks"
-#~ msgstr "Pridėti į žymeles"
-
-#~ msgid "Folder"
-#~ msgstr "Aplankas"
-
-#~ msgid "Blank FIle"
-#~ msgstr "Tuščias failas"
-
-#~ msgid "Show _Hidden"
-#~ msgstr "Rod_yti paslėptus"
-
-#~ msgid "_Compact View"
-#~ msgstr "_Kompaktiška peržiūra"
-
-#~ msgid "Detailed _List View"
-#~ msgstr "_Detali peržiūra"
-
-#~ msgid "By _Name"
-#~ msgstr "Pagal pavadi_nimą"
-
-#~ msgid "By _Modification Time"
-#~ msgstr "Pagal pakeitimo _laiką"
-
-#~ msgid "Open in New Window"
-#~ msgstr "Atverti naujame lange"
