--- a/po/lg.po
+++ b/po/lg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 00:51+0200\n"
-"PO-Revision-Date: 2012-07-07 20:08+0200\n"
+"PO-Revision-Date: 2012-07-07 21:12+0200\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -77,7 +77,7 @@ msgid ""
 msgstr ""
 "<b>Wasangidwawo fayiro endala nga erinnya lye lirimu.</b>\n"
 "\n"
-"Fayiro eyo esooke egyibwewo?"
+"Fayiro eyo oyagala esooke egyibwewo"
 
 #: ../data/ui/ask-rename.glade.h:5
 msgid "with the following file?"
@@ -213,35 +213,36 @@ msgstr "Olukusa olw'obwanannyini"
 
 #: ../data/ui/file-prop.glade.h:28
 msgid "Set GID"
-msgstr "Olukusa oluyingiza mu guluupu"
+msgstr "Olukusa olwazika GID"
 
 #: ../data/ui/file-prop.glade.h:29
 msgid "Sticky & set GID"
-msgstr "Olukusa olw'obwanannyini n'olokusa oluyingiza mu guluupu"
+msgstr "Olukusa olw'obwanannyini n'olukusa oluyingiza mu guluupu"
 
 #: ../data/ui/file-prop.glade.h:30
 msgid "Set UID"
-msgstr ""
+msgstr "Olukusa olwazika UID"
 
 #: ../data/ui/file-prop.glade.h:31
 msgid "Set UID & GID"
 msgstr ""
+"Olukusa olwazika obuyinza bwa nnyini fayiro n'olukusa oluyingiza mu guluupu"
 
 #: ../data/ui/file-prop.glade.h:32
 msgid "Nobody"
-msgstr ""
+msgstr "Bbule"
 
 #: ../data/ui/file-prop.glade.h:33
 msgid "Only owner"
-msgstr ""
+msgstr "Nyini fayiro yekka"
 
 #: ../data/ui/file-prop.glade.h:34
 msgid "Only owner and group"
-msgstr ""
+msgstr "Nyini fayiro n'aba mu guluupu ya yo bokka"
 
 #: ../data/ui/file-prop.glade.h:35
 msgid "Anyone"
-msgstr ""
+msgstr "Buli ayagala"
 
 #. Preparing to do some file operation (Copy, Move, Delete...)
 #: ../data/ui/progress.glade.h:2
@@ -251,7 +252,7 @@ msgstr "Ntegeka..."
 #. Processing: <Name of currently proccesed file>
 #: ../data/ui/progress.glade.h:4
 msgid "<b>Processing:</b>"
-msgstr "<b>Nkola ku:</b>"
+msgstr "<b>Omulimu gubindabinda:</b>"
 
 #. To: <Destination folder> ex. Copy file to..., Move file to...etc.
 #: ../data/ui/progress.glade.h:6
@@ -429,7 +430,7 @@ msgid ""
 msgstr ""
 "Fayiro ezimu tekisobose okuzitwala mu bisuulidwa olw'okubanga sisitemu eza "
 "fayiro kwe ziri tezikikkiriza.\n"
-"Nzigyewobugya?"
+"Fayiro ezo nzigyewobugya?"
 
 #: ../src/gtk/fm-progress-dlg.c:472
 msgid ", "
@@ -437,19 +438,19 @@ msgstr ", "
 
 #: ../src/gtk/fm-progress-dlg.c:488
 msgid "Moving files"
-msgstr "Fayiro nzijjulula"
+msgstr "Nzijulula fayiro"
 
 #: ../src/gtk/fm-progress-dlg.c:491
 msgid "Copying files"
-msgstr "Fayiro nzikolamu koppi"
+msgstr "Nkola koppi mu fayiro"
 
 #: ../src/gtk/fm-progress-dlg.c:494
 msgid "Trashing files"
-msgstr "Fayiro nziteeka mu bisuulidwa"
+msgstr "Mu bisuulidwa nteekayo fayiro"
 
 #: ../src/gtk/fm-progress-dlg.c:497
 msgid "Deleting files"
-msgstr "Fayiro nzigyawo"
+msgstr "Nzigyawo fayiro"
 
 #: ../src/gtk/fm-progress-dlg.c:500
 msgid "Creating symlinks"
@@ -477,11 +478,9 @@ msgstr "Wandika erinnya oba namba ya guluupu ebikkirizibwa."
 #: ../src/gtk/fm-file-properties.c:437
 msgid ""
 "Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr ""
-"Enkyuka zino nzikole ku fayiro zonna n'amaterekero agali munda mu lino?"
+msgstr "Enkyuka zino nzikole ku fayiro zonna n'amaterekero agali munda mu lino?"
 
 #: ../src/gtk/fm-file-properties.c:617
-#, fuzzy
 msgid "<b>Access content:</b>"
 msgstr "<b>Eby'endukusa</b>"
 
@@ -701,163 +700,167 @@ msgstr "Awakolerwa"
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
-msgstr "Disiki CD etayongerekako bintu (CD-ROM)"
+msgstr "Disiki eya CD etayongerekako bintu - CD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:41
 msgid "Blank CD-ROM Disc"
-msgstr "Disiki CD etayongerekako bintu (CD-ROM) - nkalu"
+msgstr "Disiki enkalu eya CD etayongerekako bintu - CD-ROM enkalu"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "CD-R Disc"
-msgstr "Disiki CD etayongerekako bintu (CD-R)"
+msgstr "Disiki eya CD etayongerekako bintu - CD-R"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "Blank CD-R Disc"
-msgstr "Disiki CD etayongerekako bintu (CD-R) - nkalu"
+msgstr "Disiki enkulu eya CD etayongerekako bintu - CD-R enkalu"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "CD-RW Disc"
-msgstr "Disiki CD eyongerekako bintu (CD-RW)"
+msgstr "Disiki eya CD eyongerekako bintu - CD-RW"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "Blank CD-RW Disc"
-msgstr "Disiki CD eyongerekako bintu (CD-RW) - nkalu"
+msgstr "Disiki enkalu eya CD eyongerekako bintu - CD-RW enkalu"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
-msgstr "Disiki DVD etayongerekako bintu (DVD-ROM)"
+msgstr "Disiki eya DVD etayongerekako bintu - DVD-ROM"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
-msgstr "Disiki DVD etayongerekako bintu (DVD-ROM) - nkalu"
+msgstr "Disiki enkalu eya DVD etayongerekako bintu - DVD-ROM enkalu"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "DVD-RW Disc"
-msgstr "Disiki DVD eyongerekako bintu (DVD-RW)"
+msgstr "Disiki eya DVD eyongerekako bintu - DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "Blank DVD-RW Disc"
-msgstr "Disiki DVD eyongerekako bintu (DVD-RW) - nkalu"
+msgstr "Disiki enkalu eya DVD eyongerekako bintu - DVD-RW enkalu"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "DVD-RAM Disc"
-msgstr "Disiki ya DVD ya kika kya RAM (DVD-RAM)"
+msgstr "Disiki eya DVD ey'ekika kya RAM - DVD-RAM"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "Blank DVD-RAM Disc"
-msgstr "Disiki ya DVD ya kika kya RAM (DVD-RAM) - nkalu"
+msgstr "Disiki enkalu eya DVD ey'ekika kya RAM - DVD-RAM enkalu"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "DVD+R Disc"
-msgstr "Disiki ya DVD+ etayongerekako bintu (DVD+R)"
+msgstr "Disiki eya DVD+ etayongerekako bintu - DVD+R"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "Blank DVD+R Disc"
-msgstr "Disiki ya DVD+ etayongerekako bintu (DVD+R) - nkalu"
+msgstr "Disiki enkalu eya DVD+ etayongerekako bintu - DVD+R enkalu"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "DVD+RW Disc"
-msgstr "Disiki ya DVD+ eyongerekako bintu (DVD+RW)"
+msgstr "Disiki eya DVD+ eyongerekako bintu - DVD+RW"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "Blank DVD+RW Disc"
-msgstr "Disiki ya DVD+ eyongerekako bintu (DVD+RW) - nkalu"
+msgstr "Disiki enkalu eya DVD+ eyongerekako bintu - DVD+RW enkalu"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "DVD+R DL Disc"
-msgstr "Disiki ya DVD+ etayongerekako bintu ya kika kya DL (DVD+R DL)"
+msgstr "Disiki eya DVD+ etayongerekako bintu ey'ekika kya DL - DVD+R DL"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "Blank DVD+R DL Disc"
-msgstr "Disiki ya DVD+ etayongerekako bintu ya kika kya DL (DVD+R DL) - nkalu"
+msgstr ""
+"Disiki enkalu eya DVD+ etayongerekako bintu ey'kika kya DL - DVD+R DL enkalu"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "DVD+RW DL Disc"
-msgstr "Disiki ya DVD+ eyongerekako bintu ya kika kya DL (DVD+RW DL)"
+msgstr "Disiki eya DVD+ eyongerekako bintu ey'ekika kya DL - DVD+RW DL"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "Blank DVD+RW DL Disc"
-msgstr "Disiki ya DVD+ eyongerekako bintu ya kika kya DL (DVD+RW DL) - nkalu"
+msgstr ""
+"Disiki enkalu eya DVD+ eyongerekako bintu ey'ekika kya DL - DVD+RW DL enkalu"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blu-Ray Disc"
-msgstr "Disiki ya 'Blu-Ray'"
+msgstr "Disiki eya Bulu re - Blu-Ray"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blank Blu-Ray Disc"
-msgstr "Disiki ya 'Blu-Ray' - nkalu"
+msgstr "Disiki enkalu eya Bulu re - Blu-Ray enkalu"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blu-Ray R Disc"
-msgstr "Disiki ya 'Blu-Ray' etayongerekako bintu (R)"
+msgstr "Disiki eya Bulu re etayongerekako bintu - Blu-Ray R"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blank Blu-Ray R Disc"
-msgstr "Disiki ya 'Blu-Ray' etayongerekako bintu (R) - nkalu"
+msgstr "Disiki enkalu eya Bulu re etayongerekako bintu - Blu-Ray R enkalu"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blu-Ray RW Disc"
-msgstr "Disiki ya 'Blu-Ray' eyongerekako bintu (RW)"
+msgstr "Disiki eya Bulu re eyongerekako bintu - Blu-Ray RW"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blank Blu-Ray RW Disc"
-msgstr "Disiki ya 'Blu-Ray' eyongerekako bintu (RW) - nkalu"
+msgstr "Disiki enkalu eya Bulu re eyongerekako bintu - Blu-Ray RW enkalu"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "HD DVD Disc"
-msgstr "Disiki DVD ya kika kya HD (HD DVD)"
+msgstr "Disiki eya DVD ey'ekika kya HD - HD DVD"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "Blank HD DVD Disc"
-msgstr "Disiki DVD ya kika kya HD (HD DVD) - nkalu"
+msgstr "Disiki enkalu eya DVD ey'ekika kya HD - HD DVD enkalu"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "HD DVD-R Disc"
-msgstr "Disiki DVD etayongerekako bintu ya kika kya HD (DVD-R)"
+msgstr "Disiki eya DVD etayongerekako bintu ey'ekika kya HD - HD DVD-R"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "Blank HD DVD-R Disc"
-msgstr "Disiki DVD etayongerwako bintu ya kika kya HD (HD DVD-R) - nkalu"
+msgstr ""
+"Disiki enkalu eyaDVD etayongerwako bintu ey'ekika kya HD - HD DVD-R enkalu"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "HD DVD-RW Disc"
-msgstr "Disiki DVD eyongerekako bintu ya kika kya HD (HD DVD-RW)"
+msgstr "Disiki eya DVD eyongerekako bintu ey'ekika kya HD - HD DVD-RW"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "Blank HD DVD-RW Disc"
-msgstr "Disiki DVD eyongerekako bintu ya kika kya HD (HD DVD-RW) - nkalu"
+msgstr ""
+"Disiki enkalu eya DVD eyongerekako bintu ey'ekika kya HD - HD DVD-RW enkalu"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "MO Disc"
-msgstr "Disiki ya kika kya MO"
+msgstr "Disiki ey'ekika kya MO"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "Blank MO Disc"
-msgstr "Disiki ya kika kya MO - nkalu"
+msgstr "Disiki enkalu ey'ekika kya MO"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "MRW Disc"
-msgstr "Disiki ya kika kya MRW"
+msgstr "Disiki ey'ekika kya MRW"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "Blank MRW Disc"
-msgstr "Disiki ya kika kya MRW - nkalu"
+msgstr "Disiki enkalu ey'ekika kya MRW"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "MRW/W Disc"
-msgstr "Disiki ya kika kya MRW/W"
+msgstr "Disiki ey'ekika kya MRW/W"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "Blank MRW/W Disc"
-msgstr "Disiki ya kika kya MRW/W - nkalu"
+msgstr "Disiki nkalu ey'ekika kya MRW/W"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
-msgstr "Disiki CD oba DVD nkalu"
+msgstr "Disiki enkalu eya CD oba DVD"
 
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
-msgstr "Disiki CD oba DVD"
+msgstr "Disiki eya CD oba DVD"
 
 #~ msgid "<b>Group:</b>"
 #~ msgstr "<b>Guluupu:</b>"
